[package]
name = "waybox"
version = "0.1.0"
authors = ["Sam Smith <sam.henning.smith@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mmap = "0.1.1"
memfd = "0.3.0"
wayland-client = "0.26.6"
wayland-kbd = "0.13.1"
wayland-protocols = { version = "0.26.6", features=["client"] }